# mcp-airflow-postgres

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  smithery.yaml
src/: __init__.py  client.py  server.py
