[project]
name = "mcp-airflow-postgres"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Airflow database integration"
readme = "README.md"
authors = [
    {name = "Gavin Huang"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastmcp>=2.3.1",  # Model Context Protocol implementation
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.6",  # For PostgreSQL support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[project.scripts]
mcp-airflow-postgres = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling]
packages = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]  